force-app/main/default/objects/Default_Equipment__c/Default_Equipment__c.object-meta.xml
<CustomObject>
    <label>Default Equipment</label>
    <nameField>
        <label>Default Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Default Equipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>