force-app/main/default/objects/Default_Equipment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active flag consumed in the default equipment flow(This field was created for NPL MA).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>