force-app/main/default/objects/Default_Equipment__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the asset object(This field was created for NPL MA).</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Default Equipments</relationshipLabel>
    <relationshipName>DefaultEquipments</relationshipName>
    <type>Lookup</type>
</CustomField>