force-app/main/default/objects/Default_Equipment__c/fields/AssetName__c.field-meta.xml
<CustomField>
    <fullName>AssetName__c</fullName>
    <description>Asset name and description(This field was created for NPL MA).</description>
    <formula>Asset__r.Name</formula>
    <label>Asset Name</label>
    <type>Text</type>
</CustomField>