force-app/main/default/objects/Default_Equipment__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the cost center object(This field was created for NPL MA).</description>
    <label>Cost Center</label>
    <referenceTo>Cost_Center__c</referenceTo>
    <relationshipLabel>Default Equipments Cost Center</relationshipLabel>
    <relationshipName>Default_Equipments_CostCenter</relationshipName>
    <type>Lookup</type>
</CustomField>