force-app/main/default/objects/Default_Equipment__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee record of the foreman, from which the profit and cost center are derived(This field was created for NPL MA).</description>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Default Equipments</relationshipLabel>
    <relationshipName>Default_Equipments</relationshipName>
    <type>Lookup</type>
</CustomField>