force-app/main/default/objects/Default_Equipment__c/fields/Foreman_Name__c.field-meta.xml
<CustomField>
    <fullName>Foreman_Name__c</fullName>
    <description>Foreman&apos;s first and last name(This field was created for NPL MA).</description>
    <formula>IF ( Foreman__r.MiddleName  &lt;&gt; &apos;&apos;, Foreman__r.FirstName &amp; Foreman__r.MiddleName &amp;  Foreman__r.LastName, Foreman__r.FirstName &amp; Foreman__r.LastName )</formula>
    <label>Foreman Name</label>
    <type>Text</type>
</CustomField>