force-app/main/default/objects/Default_Equipment__c/fields/ProfitCenter__c.field-meta.xml
<CustomField>
    <fullName>ProfitCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the profit center object(This field was created for NPL MA).</description>
    <label>Profit Center</label>
    <referenceTo>Profit_Center__c</referenceTo>
    <relationshipLabel>Default Equipments Profit Center</relationshipLabel>
    <relationshipName>Default_Equipments_ProfitCenter</relationshipName>
    <type>Lookup</type>
</CustomField>