force-app/main/default/objects/Default_Equipment__c/fields/ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>ServiceResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the ServiceResource identifying the foreman(This field was created for NPL MA).</description>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Default Equipments Service Resource</relationshipLabel>
    <relationshipName>Default_Equipments_ServiceResource</relationshipName>
    <type>Lookup</type>
</CustomField>