force-app/main/default/objects/Default_Equipment__c/fields/USGas_End_Date__c.field-meta.xml
<CustomField>
    <fullName>USGas_End_Date__c</fullName>
    <description>For ADO #24121</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>