force-app/main/default/objects/Default_Equipment__c/fields/USGas_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>USGas_Start_Date__c</fullName>
    <description>For Ado #24121</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>