force-app/main/default/objects/Default_Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AssetName__c</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Foreman__c</columns>
    <columns>Employee__c</columns>
    <columns>ServiceResource__c</columns>
    <columns>CostCenter__c</columns>
    <columns>ProfitCenter__c</columns>
    <columns>Asset__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>